# zrelay

./: .coverage  .env.example  .gitignore  Dockerfile  FASTHTML_REFERENCE.md  Justfile  README.md  docker-compose.yml  llms.txt  pyproject.toml  starttz.md
.github/workflows/: docker-publish.yml
.linters/: mypy.ini  pyrightconfig.json  ruff.toml
docs/: architecture.md  glossary.md  golden-principles.md
docs/exec-plans/active/: 004-docker-and-verification.md  005-testing-and-coverage.md  007-connect-admin-dashboard.md  008-linters-and-guardrails.md  009-unified-error-format.md  010-remove-local-keys-json.md
docs/exec-plans/completed/: 001-scaffolding-and-core.md  002-infrastructure-and-application.md  003-interface-and-api.md  006-admin-dashboard-fasthtml.md  007-connect-admin-dashboard.md  009-unified-error-format.md
src/application/ports/: mcp_port.py  repository_port.py
src/application/services/: zrelay_service.py
src/domain/entities/: api_error.py  api_key.py  tool_result.py  usage_log.py
src/infrastructure/: config.py
src/infrastructure/adapters/: mcp_local.py  mcp_remote.py
src/infrastructure/repositories/: sqlite_repository.py
src/interface/admin/: app.py
src/interface/api/: auth.py  dependencies.py  exceptions.py  main.py
src/interface/api/middleware/: error_handler.py
src/interface/api/routes/: reader.py  search.py  vision.py  zread.py
tests/: e2e_docker_test.sh  e2e_real_test.py  e2e_vision_test.py
tests/application/: test_zrelay_service.py
tests/e2e/: README.md  test_e2e.py
tests/infrastructure/: test_sqlite_repository.py
tests/interface/: test_api_auth.py
