[project]
name = "zrelay"
version = "0.1.0"
description = "REST/OpenAPI gateway for z.ai MCP tools"
authors = [{ name = "AI Agent", email = "agent@z.ai" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlmodel>=0.0.22",
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.12",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
